2005-10-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nslog/nslog.c (Ns_ModuleInit): failed to create the log
	file when given the relative path.

2005-10-17  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nslog/nslog.c: missed initialization of logfile descriptor.
	This caused us to close invalid descriptor in LogOpen. As the
	result, the interactive NS mode assumed non-interactive use and
	prematurely exited.

2005-10-17  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/log.c:
	* tests/ns_log.test: Add new sub-command: ns_logctl severity.
	With this you can query and set the status of any of the log
	levels at runtime.  For example, you could log into the control
	port -- ns_logctl severity debug on -- to track down a problem.

	* nslog/nslog.c:
	* nscp/nscp.c:
	* nscgi/nscgi.c:
	* nsdb/dbinit.c: Use new config routines.

2005-10-15  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/config.c: Log the section, key, value and any default, min
	or max whenever a configuration value is looked up.  Log at level
	Debug which by default is off. Can now quickly determine which config
	keys are valid/used.
	* nsd/nsmain.c:
	* nsd/nsconf.c:
	* nsd/log.c: Initialise log system earlier -- dissable Dev and
	Debug log levels during early boot up.
	* nsd/driver.c:
	* nsd/nsd.h: Some logging cleanup.

	* Makefile:
	* acinclude.m4:
	* m4/dns.m4: Drop acinclude.m4 and move dns checking macros into
	own file in m4 directory.
	* configure.in:
	* nsd/dns.c: Use built-in AC_CHECK_MEMBERS macro.

2005-10-15  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclfile.c (UnspliceChannel): disable any potential
	ready-to-fire events in the threads event queue which 
	reference to-be-unspliced channel.
	Reformatted, untabified, beautified, commented, ...ed :-)

	* acinclude.m4: removed m4 checking for structure members

	* configure.in: added checking for sin_len in sockaddr_in

	* nsd/dns.c: added checking for HAVE_MTSAFE_DNS and add 