@@ -454,7 +454,7 @@ NsTclHTUUEncodeObjCmd(ClientData dummy, Tcl_Interp *interp, int objc, Tcl_Obj **
         return TCL_ERROR;
     }
     string = Tcl_GetStringFromObj(objv[1], &nbytes);
-    result = ns_malloc((size_t) 1 + (4 * nbytes) / 2);
+    result = ns_malloc((size_t) 1 + (4 * MAX(nbytes,2)) / 2);
     Ns_HtuuEncode((unsigned char *) string, (size_t)nbytes, result);
     Tcl_SetResult(interp, result, (Tcl_FreeProc *) ns_free);
     return TCL_OK;
